--- a/default.css
+++ b/default.css
@@ -350,7 +350,9 @@
             }
             
             #music {
-                text-align: center
+                text-align: center;
+                background-color: #474350
+            }
             }
             /*********************************************************************************/
             /* Menu                                                                          */
