--- a/default.css
+++ b/default.css
@@ -201,6 +201,7 @@
             /* Social Icon Styles                                                            */
             /*********************************************************************************/
             
+
             ul.contact {
                 margin: 0;
                 padding: 2em 0em 0em 0em;
@@ -318,7 +319,10 @@
             /*********************************************************************************/
             /* Logo                                                                          */
             /*********************************************************************************/
-            
+            #music {
+                background-color: #474350
+            }
+
             #logo {
                 position: absolute;
                 top: 2em;
